fixed horizontal scrolling on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -323,6 +323,10 @@ header .inner-header nav ul a:hover {
   .introduction-item p {
     margin: 1em !important;
   }
+  .introduction-item img {
+    width: 100%;
+    height: initial;
+  }
 
   footer .footer-links ul {
     flex-direction: column;
