--- a/scss/responsive/_mobile-800.scss
+++ b/scss/responsive/_mobile-800.scss
@@ -245,6 +245,11 @@
     p {
       margin: 1em !important;
     }
+    img{
+      width: 100%;
+      height: initial;
+    }
+
   }
 
   footer {
